--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -41,5 +41,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.11.0</version>
         </dependency>
+<!--        Kryo序列化-->
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>4.0.2</version>
+        </dependency>
     </dependencies>
 </project>
