--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -47,5 +47,11 @@
             <artifactId>kryo</artifactId>
             <version>4.0.2</version>
         </dependency>
+<!--        Nacos注册中心-->
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>2.1.0</version>
+        </dependency>
     </dependencies>
 </project>
