--- a/rpc-common/pom.xml
+++ b/rpc-common/pom.xml
@@ -13,4 +13,12 @@
 
     <name>rpc-common</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>${nacos-client-version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
