--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>com.alibaba.nacos</groupId>
             <artifactId>nacos-client</artifactId>
-            <version>2.1.0</version>
+            <version>${nacos-client-version}</version>
         </dependency>
     </dependencies>
 </project>
